--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -5,4 +5,9 @@
       {{ (current_user.username[:2] if current_user and current_user.username else 'JD') | upper }}
     </div>
   </div>
+  <a href="{{ url_for('logout') }}" data-noload
+   class="inline-flex items-center rounded-lg border border-gray-300 px-3 py-1.5 text-sm hover:bg-gray-50">
+  Sign out
+</a>
+
 </header>
